--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,7 +1,7 @@
 
 
 .header-wrapper{
-    background-image: url('../images/header.jpg');
+    background-image: url('../images/header-mobile.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height:100vh;
@@ -26,11 +26,11 @@
  color:whitesmoke;
 }
 .containers{
-    margin-left: 5rem;
+    margin-left: 4rem;
 }
 
 button{
-    margin-left: 5rem;
+    margin-left: 4rem;
     width:15rem;
     color:#d36821;
     background: #333745;
